--- a/spring-cloud-zookeeper/src/main/resources/application.yml
+++ b/spring-cloud-zookeeper/src/main/resources/application.yml
@@ -1,4 +1,10 @@
+
 spring:
   cloud:
     zookeeper:
       connect-string: localhost:2181
+      discovery:
+        enabled: false
+
+#server:
+#  port: 2181
